Added endpoints to get, create, update and delete user
